[gd_scene load_steps=21 format=3 uid="uid://s56t7lmryg0w"]

[ext_resource type="PackedScene" uid="uid://bbji28y68eptm" path="res://maps/_world.tscn" id="1_1ssps"]
[ext_resource type="Script" path="res://maps/magmatic.gd" id="2_iuy2n"]
[ext_resource type="PackedScene" uid="uid://bv84w2n2orj6y" path="res://environment/backgrounds/scenes/cave.tscn" id="3_vafoa"]
[ext_resource type="PackedScene" uid="uid://dh1dborjhdnjl" path="res://props/spawn_point.tscn" id="4_mnkic"]
[ext_resource type="PackedScene" uid="uid://clfloi25mmp6f" path="res://entities/enemies/tentacle.tscn" id="5_4gkfx"]
[ext_resource type="PackedScene" uid="uid://bnama2m0ylxhb" path="res://entities/enemies/firefrog.tscn" id="5_mdy30"]
[ext_resource type="PackedScene" uid="uid://m8iwyag5o0g3" path="res://environment/lava.tscn" id="7_rrwib"]
[ext_resource type="PackedScene" uid="uid://b0vf1m3hwqcia" path="res://props/button.tscn" id="8_reuoh"]
[ext_resource type="Texture2D" uid="uid://badmtdhilycmg" path="res://props/button_warning.png" id="9_ishtf"]
[ext_resource type="PackedScene" uid="uid://cl4hrtbeuotdo" path="res://pieces/moving_element_sin.tscn" id="10_johb3"]
[ext_resource type="PackedScene" uid="uid://piuwu5cpi8wm" path="res://props/moving_platform.tscn" id="11_beuio"]
[ext_resource type="Texture2D" uid="uid://cddilf7hq4hll" path="res://props/crane_hook.png" id="12_bmgrd"]
[ext_resource type="PackedScene" uid="uid://dlh2fcbilafwe" path="res://props/chest.tscn" id="13_f58ms"]
[ext_resource type="PackedScene" uid="uid://k7q5ns6wn7gj" path="res://props/crate_money.tscn" id="14_f71r7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_muu08"]
size = Vector2(36, 16)

[sub_resource type="Curve2D" id="Curve2D_0eb1n"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 480, -768, 0, 0, 0, 0, 480, -256)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_ei5ls"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 800, -768, 0, 0, 0, 0, 800, -384)
}
point_count = 2

[sub_resource type="Animation" id="Animation_kvrda"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("props/lava:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 496)]
}

[sub_resource type="Animation" id="Animation_4b686"]
resource_name = "arise"
length = 24.0
step = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("props/lava:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6, 18, 24),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 496), Vector2(0, 376), Vector2(0, -224), Vector2(0, -360)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xp45w"]
_data = {
"RESET": SubResource("Animation_kvrda"),
"arise": SubResource("Animation_4b686")
}

[node name="magmatic" instance=ExtResource("1_1ssps")]
script = ExtResource("2_iuy2n")

[node name="cave" parent="bac" index="0" instance=ExtResource("3_vafoa")]
unique_name_in_owner = true

[node name="spawn_point0" parent="spawns" index="0" instance=ExtResource("4_mnkic")]
position = Vector2(-576, -928)

[node name="spawn_point1" parent="spawns" index="1" instance=ExtResource("4_mnkic")]
position = Vector2(576, -928)

[node name="spawn_point2" parent="spawns" index="2" instance=ExtResource("4_mnkic")]
position = Vector2(-1040, -704)

[node name="spawn_point3" parent="spawns" index="3" instance=ExtResource("4_mnkic")]
position = Vector2(1072, -704)

[node name="tilemap_large" parent="." index="2"]
layer_0/tile_data = PackedInt32Array(262141, 1, 0, 262142, 65537, 0, 262143, 65537, 0, 196608, 65537, 0, 196609, 65537, 0, 196610, 131073, 0, 655362, 131073, 1, 655361, 65537, 1, 655360, 65537, 1, 720895, 65537, 1, 720894, 65537, 1, 720893, 1, 1, 327677, 1, 1, 327678, 65537, 1, 327679, 65537, 1, 262144, 65537, 1, 262145, 65537, 1, 262146, 131073, 1, 589826, 131073, 1, 589825, 65537, 1, 589824, 65537, 1, 655359, 65537, 1, 655358, 65537, 1, 655357, 1, 1, 393213, 1, 1, 393214, 65537, 1, 393215, 65537, 1, 327680, 65537, 1, 327681, 65537, 1, 327682, 131073, 1, 393218, 131073, 1, 458754, 131073, 1, 524290, 131073, 1, 524289, 65537, 1, 524288, 65537, 1, 589823, 65537, 1, 589822, 65537, 1, 589821, 1, 1, 524285, 1, 1, 458749, 1, 1, 458750, 65537, 1, 458751, 65537, 1, 393216, 65537, 1, 393217, 65537, 1, 458753, 65537, 1, 458752, 65537, 1, 524287, 65537, 1, 524286, 65537, 1, 983037, 1, 2, 983038, 65537, 2, 983039, 65537, 2, 917504, 65537, 2, 917505, 65537, 2, 917506, 131073, 2, 851970, 131073, 1, 851969, 65537, 1, 851968, 65537, 1, 917503, 65537, 1, 917502, 65537, 1, 917501, 1, 1, 851965, 1, 1, 851966, 65537, 1, 851967, 65537, 1, 786432, 65537, 1, 786433, 65537, 1, 786434, 131073, 1, 720898, 131073, 1, 720897, 65537, 1, 720896, 65537, 1, 786431, 65537, 1, 786430, 65537, 1, 786429, 1, 1, 262137, 131073, 1, 262136, 1, 1, 327672, 1, 1, 393208, 1, 1, 393209, 131073, 1, 458745, 131073, 1, 524281, 131073, 1, 589817, 131073, 1, 524280, 1, 1, 458744, 1, 1, 327673, 131073, 1, 655353, 131073, 1, 720889, 131073, 1, 786425, 131073, 1, 720888, 1, 1, 655352, 1, 1, 589816, 1, 1, 786424, 1, 1, 851960, 1, 1, 917496, 1, 1, 983032, 1, 2, 983033, 131073, 2, 917497, 131073, 1, 851961, 131073, 1, 196614, 1, 1, 262150, 1, 1, 262151, 131073, 1, 196615, 131073, 1, 327687, 131073, 1, 393223, 131073, 1, 393222, 1, 1, 458758, 1, 1, 327686, 1, 1, 524294, 1, 1, 589830, 1, 1, 655366, 1, 1, 655367, 131073, 1, 589831, 131073, 1, 524295, 131073, 1, 458759, 131073, 1, 720903, 131073, 1, 786439, 131073, 1, 851975, 131073, 1, 786438, 1, 1, 720902, 1, 1, 851974, 1, 1, 917510, 1, 2, 917511, 131073, 2, 196601, 131073, 0, 196600, 1, 0, 131078, 1, 0, 131079, 131073, 0)

[node name="tilemap" parent="." index="3"]
layer_0/tile_data = PackedInt32Array(458726, 2, 1, 524262, 393218, 3, 524263, 131074, 2, 458727, 131074, 1, 524261, 2, 3, 393190, 2, 0, 393191, 131074, 0, 458776, 2, 2, 393240, 2, 1, 327704, 2, 0, 327705, 131074, 0, 393241, 131074, 1, 458777, 327682, 3, 458778, 131074, 3, 393213, 2, 3, 393214, 393218, 3, 393215, 65538, 2, 327680, 65538, 2, 327681, 327682, 3, 327682, 131074, 3, 327678, 2, 1, 262142, 2, 1, 196606, 2, 1, 131070, 2, 1, 131071, 917506, 0, 196607, 786434, 0, 262143, 851970, 0, 327679, 65538, 1, 262144, 917506, 0, 196608, 786434, 0, 131072, 851970, 0, 65536, 786434, 0, 65537, 131074, 1, 131073, 131074, 1, 196609, 131074, 1, 262145, 131074, 1, 0, 65538, 0, 65535, 65538, 0, 65534, 2, 0, 1, 131074, 0, 196602, 393218, 3, 196603, 131074, 2, 131067, 131074, 1, 65531, 131074, 0, 65530, 2, 0, 131066, 2, 1, 196601, 2, 3, 4, 2, 0, 65540, 2, 1, 131076, 2, 2, 5, 131074, 0, 65541, 131074, 1, 131077, 327682, 3, 131078, 131074, 3, 393212, 65545, 0, 393211, 65545, 0, 393210, 65545, 0, 393209, 65545, 0, 393208, 65545, 0, 393207, 65545, 0, 393206, 65545, 0, 327683, 65545, 0, 327684, 65545, 0, 327685, 65545, 0, 327686, 65545, 0, 327687, 65545, 0, 327688, 65545, 0, 327689, 65545, 0, 393205, 9, 0, 327690, 131081, 0, -262150, 2, 2, -262149, 131074, 2, -327685, 131074, 1, -327686, 2, 1, -393221, 131074, 0, -393222, 393218, 0, -393223, 2, 3, -262146, 2, 2, -327682, 2, 1, -393218, 2, 1, -393217, 851970, 0, -458752, 917506, 0, -393216, 851970, 0, -327681, 851970, 0, -262145, 65538, 2, -327680, 65538, 2, -327679, 131074, 2, -393215, 131074, 1, -458751, 131074, 1, -327676, 2, 2, -393212, 2, 1, -458748, 2, 0, -458747, 327682, 0, -393211, 131074, 1, -327675, 131074, 2, -458746, 131074, 3, -458754, 2, 1, -524290, 2, 1, -524289, 917506, 0, -589825, 65538, 1, -589824, 65538, 1, -524288, 917506, 0, -524287, 131074, 1, -589823, 131074, 1, -458753, 786434, 0, -589826, 2, 1, -655360, 917506, 0, -655359, 131074, 1, -720895, 131074, 1, -720896, 917506, 0, -655361, 786434, 0, -655362, 2, 1, -720899, 2, 3, -720898, 393218, 0, -720897, 65538, 0, -786432, 65538, 0, -786431, 327682, 0, -786430, 131074, 3, -1441793, 2, 0, -1376257, 393218, 2, -1310721, 65538, 1, -1376256, 327682, 1, -1441792, 327682, 2, -1507328, 131074, 0, -1310720, 131074, 1, -1245184, 131074, 2, -1114112, 196610, 3, -1179649, 262146, 1, -1245185, 393218, 1, -1114113, 196610, 2, -1245186, 2, 2, -1310722, 393218, 1, -1310723, 2, 2, -1376258, 65538, 0, -1376259, 393218, 0, -1376260, 2, 3, -1376255, 131074, 2, -1441791, 327682, 0, -1441790, 65538, 3, -1441789, 131074, 3, -1507334, 131074, 0, -1441798, 131074, 1, -1376262, 131074, 2, -1376263, 393218, 3, -1441799, 2, 1, -1507335, 2, 0, -1376264, 2, 3, -1572859, 2, 0, -1507323, 2, 1, -1441787, 2, 2, -1441786, 327682, 3, -1507322, 131074, 1, -1572858, 131074, 0, -1441785, 131074, 3, -1703949, 393218, 3, -1769485, 2, 1, -1769484, 131074, 1, -1703948, 131074, 2, -1835020, 131074, 0, -1835021, 2, 0, -1703950, 2, 3, -1703954, 131074, 0, -1703955, 65538, 0, -1703956, 65538, 0, -1703957, 65538, 0, -1703958, 65538, 0, -1638421, 65538, 1, -1638420, 327682, 1, -1638419, 65538, 2, -1638418, 131074, 2, -1638422, 393218, 1, -1572884, 131074, 1, -1507348, 327682, 4, -1507347, 131074, 3, -1703963, 131074, 3, -1835037, 2, 0, -1769501, 2, 1, -1703965, 2, 2, -1703964, 327682, 3, -1769500, 131074, 1, -1835036, 131074, 0, -1703959, 2, 0, -1638423, 2, 2, -1572885, 393218, 1, -1441812, 458754, 1, -1441813, 2, 2, -1376276, 196610, 2, -1310741, 196610, 3, -1179669, 196610, 3, -1507349, 2, 1, -1572886, 2, 2, -917516, 131081, 0, -917533, 9, 0, -917517, 65545, 0, -917518, 65545, 0, -917519, 65545, 0, -917520, 65545, 0, -917521, 65545, 0, -917522, 65545, 0, -917523, 65545, 0, -917524, 65545, 0, -917525, 65545, 0, -917526, 65545, 0, -917527, 65545, 0, -917528, 65545, 0, -917529, 65545, 0, -917530, 65545, 0, -917531, 65545, 0, -917532, 65545, 0, -1769461, 2, 2, -1834997, 2, 1, -1900533, 2, 0, -1900532, 131074, 0, -1834996, 131074, 1, -1769460, 327682, 3, -1769459, 131074, 3, -1769455, 2, 0, -1769454, 65538, 0, -1769453, 65538, 0, -1769452, 65538, 0, -1769451, 65538, 0, -1769450, 131074, 0, -1703914, 131074, 2, -1703915, 327682, 1, -1703916, 917506, 0, -1703917, 393218, 1, -1703918, 65538, 2, -1703919, 2, 2, -1769446, 2, 3, -1900517, 2, 0, -1834981, 2, 1, -1769445, 393218, 3, -1638379, 131074, 2, -1638380, 65538, 2, -1638381, 262146, 1, -1572845, 196610, 1, -1507308, 131074, 0, -1507309, 589826, 2, -1507310, 2, 3, -1441773, 2, 2, -1441772, 131074, 2, -1376238, 196610, 3, -1900516, 131074, 0, -1834980, 131074, 1, -1769444, 131074, 2, -1769494, 0, 65536, 524258, 0, 65536, 458781, 0, 65536, 786425, 0, 65536, 720902, 0, 65536, -1834987, 0, 65536, -1245215, 131081, 0, -1245219, 9, 0, -1245216, 65545, 0, -1245217, 65545, 0, -1245218, 65545, 0, -1310689, 9, 0, -1310685, 131081, 0, -1310686, 65545, 0, -1310687, 65545, 0, -1310688, 65545, 0)
layer_2/tile_data = PackedInt32Array(589822, 393224, 2, 655358, 393224, 3, 720894, 393224, 3, 786430, 262152, 0, 589823, 458760, 2, 655359, 458760, 3, 720895, 458760, 3, 786431, 327688, 0, 524289, 393224, 268435458, 524288, 458760, 268435458, 589825, 393224, 268435459, 589824, 458760, 268435459, 655361, 393224, 268435459, 655360, 458760, 268435459, 720897, 327688, 0, 720896, 262152, 0, 524287, 458760, 1, 524286, 393224, 1, 458753, 393224, 268435457, 458752, 458760, 268435457, 393217, 393224, 268435456, 393216, 458760, 268435456, 458751, 458760, 0, 458750, 393224, 0, 524283, 196616, 1, 589819, 196616, 2, 655355, 196616, 3, 720891, 196616, 3, 458747, 196616, 0, 458755, 196616, 1, 524291, 196616, 2, 589827, 196616, 3, 655363, 196616, 3, 524284, 196616, 268435457, 589820, 196616, 268435458, 655356, 196616, 268435459, 720892, 196616, 268435459, 458748, 196616, 268435456, 524292, 196616, 268435458, 589828, 196616, 268435459, 655364, 196616, 268435459, 524282, 131080, 1, 589818, 131080, 2, 655354, 131080, 3, 720890, 131080, 3, 458746, 131080, 0, 524285, 131080, 1, 589821, 131080, 2, 655357, 131080, 3, 720893, 131080, 3, 458749, 131080, 0, 458754, 131080, 1, 524290, 131080, 2, 589826, 131080, 3, 655362, 131080, 3, 524293, 131080, 2, 589829, 131080, 3, 655365, 131080, 3, 524281, 65544, 1, 589817, 65544, 2, 655353, 65544, 3, 720889, 65544, 3, 458745, 65544, 0, 458758, 65544, 268435457, 524294, 65544, 268435458, 589830, 65544, 268435459, 655366, 65544, 268435459, 786425, 8, 0, 720902, 8, 0, 786426, 131080, 0, 786427, 131080, 0, 786428, 131080, 0, 786429, 131080, 0, 720898, 131080, 0, 720899, 131080, 0, 720900, 131080, 0, 720901, 131080, 0, 458744, 524296, 0, 786424, 524296, 0, 720903, 524296, 0, 524295, 524296, 2, 589831, 524296, 3, 655367, 524296, 3, 458759, 524296, 1, 589816, 524296, 2, 655352, 524296, 3, 720888, 524296, 3, 524280, 524296, 1, 393218, 524296, 0, 458756, 524296, 1, 786422, 524296, 0, 720886, 524296, 3, 655350, 524296, 2, 786423, 8, 0, 720887, 8, 3, 655351, 8, 2, 720906, 524296, 0, 720905, 8, 0, 1, 131077, 2, -65535, 131077, 1, -131071, 131077, 1, -196607, 131077, 1, -262143, 131077, 1, -327679, 131077, 0, 0, 65541, 2, -65536, 65541, 1, -131072, 65541, 1, -196608, 65541, 1, -262144, 65541, 1, -327680, 65541, 0, 65535, 65541, 2, -1, 65541, 1, -65537, 65541, 1, -131073, 65541, 1, -196609, 65541, 1, -262145, 65541, 0, 65534, 5, 2, -2, 5, 1, -65538, 5, 1, -131074, 5, 1, -196610, 5, 1, -262146, 5, 0, -1703949, 131077, 2, -1769485, 131077, 1, -1835021, 131077, 1, -1900557, 131077, 1, -1966093, 131077, 0, -1703950, 65541, 2, -1769486, 65541, 1, -1835022, 65541, 1, -1900558, 65541, 1, -1966094, 65541, 0, -1703951, 65541, 2, -1769487, 65541, 1, -1835023, 65541, 1, -1900559, 393221, 2, -1966095, 262149, 2, -1703952, 65541, 2, -1769488, 65541, 1, -1835024, 393221, 2, -1900560, 5, 0, -1703953, 65541, 2, -1769489, 65541, 1, -1835025, 65541, 0, -1703954, 65541, 2, -1769490, 65541, 1, -1835026, 327685, 2, -1900562, 131077, 0, -1703955, 65541, 2, -1769491, 65541, 1, -1835027, 65541, 1, -1900563, 327685, 2, -1966099, 131077, 0, -1703956, 65541, 2, -1769492, 65541, 1, -1835028, 65541, 1, -1900564, 65541, 1, -1966100, 65541, 0, -1703957, 65541, 2, -1769493, 65541, 1, -1835029, 65541, 1, -1900565, 65541, 1, -1966101, 327685, 2, -1703958, 65541, 2, -1769494, 65541, 1, -1835030, 65541, 1, -1900566, 65541, 1, -1966102, 65541, 1, -1703959, 65541, 2, -1769495, 65541, 1, -1835031, 65541, 1, -1900567, 65541, 1, -1966103, 393221, 2, -1703960, 65541, 2, -1769496, 65541, 1, -1835032, 65541, 1, -1900568, 65541, 1, -1966104, 65541, 0, -1703961, 65541, 2, -1769497, 65541, 1, -1835033, 65541, 1, -1900569, 393221, 2, -1966105, 5, 0, -1703962, 65541, 2, -1769498, 65541, 1, -1835034, 65541, 1, -1900570, 65541, 0, -1703963, 65541, 2, -1769499, 65541, 1, -1835035, 65541, 1, -1900571, 327685, 2, -1966107, 131077, 0, -1703964, 5, 2, -1769500, 5, 1, -1835036, 5, 1, -1900572, 5, 1, -1966108, 5, 0, -2031639, 5, 0, -2031638, 393221, 2, -2097174, 262149, 2, -2162710, 196613, 0, -2031637, 131077, 1, -2097173, 131077, 0, -2031631, 196613, 0, -1769445, 131077, 2, -1834981, 131077, 1, -1900517, 131077, 1, -1966053, 131077, 0, -1769446, 65541, 2, -1834982, 65541, 1, -1900518, 65541, 1, -1966054, 65541, 0, -1769447, 65541, 2, -1834983, 393221, 2, -1900519, 5, 1, -1966055, 589829, 0, -1769448, 65541, 2, -1834984, 65541, 0, -1966056, 65541, 2, -1769449, 65541, 2, -1834985, 327685, 2, -1900521, 131077, 1, -1966057, 327685, 1, -1769450, 65541, 2, -1834986, 65541, 1, -1900522, 65541, 1, -1966058, 393221, 2, -1769451, 65541, 2, -1834987, 65541, 1, -1900523, 65541, 1, -1966059, 65541, 0, -1769452, 65541, 2, -1834988, 65541, 1, -1900524, 65541, 1, -1966060, 327685, 2, -1769453, 65541, 2, -1834989, 65541, 1, -1900525, 65541, 1, -1966061, 65541, 1, -1769454, 65541, 2, -1834990, 65541, 1, -1900526, 65541, 1, -1966062, 393221, 2, -1769455, 65541, 2, -1834991, 65541, 1, -1900527, 393221, 2, -1966063, 5, 0, -1769456, 65541, 2, -1834992, 65541, 1, -1900528, 65541, 0, -1769457, 65541, 2, -1834993, 65541, 1, -1900529, 65541, 0, -1769458, 65541, 2, -1834994, 65541, 1, -1900530, 65541, 0, -1769459, 65541, 2, -1834995, 65541, 1, -1900531, 327685, 2, -1966067, 131077, 0, -1769460, 5, 2, -1834996, 5, 1, -1900532, 5, 1, -1966068, 5, 0, -2031598, 5, 0, -2031597, 524293, 2, -2097133, 196613, 0, -2031596, 131077, 0, -2031594, 5, 0, -2031593, 65541, 0, -2031592, 65541, 0, -2031591, 131077, 0)

[node name="enemies" type="Node2D" parent="." index="7"]

[node name="firefrog0" parent="enemies" index="0" instance=ExtResource("5_mdy30")]
position = Vector2(-360, 368)

[node name="firefrog1" parent="enemies" index="1" instance=ExtResource("5_mdy30")]
position = Vector2(360, 368)

[node name="firefrog2" parent="enemies" index="2" instance=ExtResource("5_mdy30")]
position = Vector2(-904, -496)

[node name="firefrog3" parent="enemies" index="3" instance=ExtResource("5_mdy30")]
position = Vector2(-376, -496)

[node name="tentacle0" parent="enemies" index="4" instance=ExtResource("5_4gkfx")]
position = Vector2(-848, -896)

[node name="tentacle1" parent="enemies" index="5" instance=ExtResource("5_4gkfx")]
position = Vector2(-432, -896)

[node name="props" type="Node2D" parent="." index="8"]

[node name="lava" parent="props" index="0" instance=ExtResource("7_rrwib")]
z_index = 1000
position = Vector2(0, 496)

[node name="lava_button" parent="props" index="1" node_paths=PackedStringArray("collision_shape") instance=ExtResource("8_reuoh")]
unique_name_in_owner = true
position = Vector2(0, -784)
texture = ExtResource("9_ishtf")
collision_shape = NodePath("shape")

[node name="shape" type="CollisionShape2D" parent="props/lava_button" index="2"]
position = Vector2(0, 40)
shape = SubResource("RectangleShape2D_muu08")

[node name="path0" type="Path2D" parent="props" index="2"]
curve = SubResource("Curve2D_0eb1n")

[node name="moving_element_sin" parent="props/path0" index="0" instance=ExtResource("10_johb3")]
position = Vector2(480, -768)
interval = 12.0

[node name="platform0" parent="props/path0/moving_element_sin" index="1" instance=ExtResource("11_beuio")]
position = Vector2(-48, 0)

[node name="platform1" parent="props/path0/moving_element_sin" index="2" instance=ExtResource("11_beuio")]
position = Vector2(48, 0)

[node name="hook" type="Sprite2D" parent="props/path0/moving_element_sin" index="3"]
position = Vector2(0, -136)
texture = ExtResource("12_bmgrd")

[node name="chest" parent="props/path0/moving_element_sin" index="4" instance=ExtResource("13_f58ms")]
position = Vector2(40, -24)

[node name="path1" type="Path2D" parent="props" index="3"]
curve = SubResource("Curve2D_ei5ls")

[node name="moving_element_sin" parent="props/path1" index="0" instance=ExtResource("10_johb3")]
position = Vector2(800, -768)
interval = 12.0
phase = 0.25

[node name="platform0" parent="props/path1/moving_element_sin" index="1" instance=ExtResource("11_beuio")]
position = Vector2(-48, 0)

[node name="platform1" parent="props/path1/moving_element_sin" index="2" instance=ExtResource("11_beuio")]
position = Vector2(48, 0)

[node name="hook" type="Sprite2D" parent="props/path1/moving_element_sin" index="3"]
position = Vector2(0, -136)
texture = ExtResource("12_bmgrd")

[node name="chest" parent="props/path1/moving_element_sin" index="4" instance=ExtResource("13_f58ms")]
position = Vector2(40, -24)

[node name="crate_money0" parent="props" index="4" instance=ExtResource("14_f71r7")]
position = Vector2(-840, -512)

[node name="crate_money1" parent="props" index="5" instance=ExtResource("14_f71r7")]
position = Vector2(-792, -512)

[node name="crate_money2" parent="props" index="6" instance=ExtResource("14_f71r7")]
position = Vector2(-712, -512)

[node name="crate_money3" parent="props" index="7" instance=ExtResource("14_f71r7")]
position = Vector2(-752, -556)

[node name="crate_money4" parent="props" index="8" instance=ExtResource("14_f71r7")]
position = Vector2(-504, -512)

[node name="crate_money5" parent="props" index="9" instance=ExtResource("14_f71r7")]
position = Vector2(-528, -556)

[node name="crate_money6" parent="props" index="10" instance=ExtResource("14_f71r7")]
position = Vector2(-504, -600)

[node name="crate_money7" parent="props" index="11" instance=ExtResource("14_f71r7")]
position = Vector2(-440, -512)

[node name="lava_animator" type="AnimationPlayer" parent="." index="9"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_xp45w")
}

[connection signal="activated" from="props/lava_button" to="." method="_on_button_activated"]
